Fixing navigation menu items' alignment

--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -101,7 +101,8 @@
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
     display: inline-block;
-    padding-left: 1em;
+    padding: 0.9em;
+    width: 85%;
 }
 
 .navbar .link:hover {
@@ -144,4 +145,11 @@
 .navbar .resume-link,
 .navbar .fa-file-alt {
     color: #424242;
+}
+.navbar {
+    .fas, .fab {
+        padding-left: 0.5em;
+        width: 100%;
+        margin: 0;
+    }
 }
